export enum Position {
	"C" = "Center",
	"CB" = "Cornerback",
	"DE" = "Defensive End",
	"DT" = "Defensive Tackle",
	"FB" = "Fullback",
	"FS" = "Free Safety",
	"ILB" = "Inside Linebacker",
	"K" = "Kicker",
	"KR" = "Kick Returner",
	"LB" = "Linebacker",
	"LG" = "Left Guard",
	"LS" = "Long Snapper",
	"LT" = "Left Tackle",
	"MLB" = "Middle Linebacker",
	"NT" = "Nose Tackle",
	"OL" = "Offensive Lineman",
	"OLB" = "Outside Linebacker",
	"P" = "Punter",
	"PR" = "Punt Returner",
	"QB" = "Quarterback",
	"RB" = "Running Back",
	"RG" = "Right Guard",
	"RT" = "Right Tackle",
	"S" = "Safety",
	"SS" = "Strong Safety",
	"TE" = "Tight End",
	"WR" = "Wide Receiver",
}
