...
						h={"$12"}
						position="relative"
						justifyContent="center"
						alignItems="center"
					>
						<Ionicons
							testID="backButton"
							name="arrow-back"
							size={28}
							onPress={router.back}
							style={{ position: "absolute", left: 5 }}
						/>
						<Text fontSize={"$2xl"} fontWeight={"$semibold"}>
...
							<Text>Player not found, please swipe back and try again</Text>
						</HStack>
					) : (
						player && (
							<ScrollView showsVerticalScrollIndicator={false}>
								<HStack
									testID="playerDetails"
									justifyContent="center"
									alignItems="center"
									position="relative"
								>
									<Ionicons
										name="person-circle-outline"
...
